WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95918
ASM llint should not use the JIT when the useJIT() option is false
https://bugs.webkit.org/show_bug.cgi?id=95918
Summary
ASM llint should not use the JIT when the useJIT() option is false
Mark Lam
Reported
2012-09-05 17:42:59 PDT
r127554
(
https://bugs.webkit.org/show_bug.cgi?id=95809
) caused a regression where the ASM llint will still the JIT when the useJIT() option is false, but only when useRegExpJIT() (previously useYarrJIT() is true). Alsop renamed useYarrJIT() to useRegExpJIT().
Attachments
Fix.
(4.28 KB, patch)
2012-09-05 17:48 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2012-09-05 17:48:25 PDT
Created
attachment 162382
[details]
Fix.
Geoffrey Garen
Comment 2
2012-09-05 20:57:33 PDT
Comment on
attachment 162382
[details]
Fix. r=me
WebKit Review Bot
Comment 3
2012-09-06 03:12:50 PDT
Comment on
attachment 162382
[details]
Fix. Clearing flags on attachment: 162382 Committed
r127719
: <
http://trac.webkit.org/changeset/127719
>
WebKit Review Bot
Comment 4
2012-09-06 03:12:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug