Renamed useYarrJIT() option to useRegExpJIT(). Also fixed regression in which inadvertantly allows the ASM llint to use the baseline JIT when useRegExpJIT() is true. https://bugs.webkit.org/show_bug.cgi?id=95918.

Patch by Mark Lam <mark.lam@apple.com> on 2012-09-06
Reviewed by Geoffrey Garen.

* runtime/JSGlobalData.cpp:
(JSC::enableAssembler):
(JSC::JSGlobalData::JSGlobalData):
* runtime/JSGlobalData.h:
(JSC::JSGlobalData::canUseJIT):
(JSC::JSGlobalData::canUseRegExpJIT):
(JSGlobalData):
* runtime/Options.cpp:
(JSC::Options::initialize):
* runtime/Options.h:
(JSC):

Canonical link: https://commits.webkit.org/113821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127719 268f45cc-cd09-0410-ab3c-d52691b4dbfc